...
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/backButton_A2"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:backgroundTint="#3F51B5"
                android:text="Back"
                android:textSize="16dp" />

...
